# alphabetic

./: Cargo.toml  README.md
src/: alphabetic.rs  enums.rs  error.rs  lib.rs
