[package]
name = "alphabetic"
description = "Simple crate featuring a struct that represents a letter in Latin-script alphabet."
repository = "https://github.com/gogo1704/alphabetic"
license = "GPL-3.0-or-later"
keywords = ["parsing","utility","text","character","ascii"]
categories = ["data-structures","encoding","parsing"]
readme = "README.md"
version = "0.2.1"
edition = "2024"

[dependencies]
thiserror = "2.0.18"
